Fixing Sun Tracker inacurracy

--- a/Sun Tracker/BRSunTrackerViewController.xib
+++ b/Sun Tracker/BRSunTrackerViewController.xib
@@ -27,13 +27,13 @@
                     <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view alpha="0.5" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZIA-Kb-Rrf" userLabel="View - Vertical axis">
-                    <rect key="frame" x="159" y="70" width="2" height="428"/>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZIA-Kb-Rrf" userLabel="View - Vertical axis">
+                    <rect key="frame" x="159" y="70" width="1" height="428"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                 </view>
-                <view alpha="0.5" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ard-TJ-q98" userLabel="View - Horizontal axis">
-                    <rect key="frame" x="0.0" y="283" width="320" height="2"/>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ard-TJ-q98" userLabel="View - Horizontal axis">
+                    <rect key="frame" x="0.0" y="283" width="320" height="1"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                 </view>
